# rag-test

./: .gitignore  README.md  main.py  pyproject.toml
data/: MCD-e-coli-reuters.txt  open-ai-whisper-hallucinations-ap.txt
