[project]
name = "rag-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faiss-cpu>=1.9.0",
    "langchain-community>=0.3.3",
    "langchain-huggingface>=0.1.0",
    "langchain>=0.3.4",
    "sentence-transformers>=3.2.1",
    "torch>=2.5.0",
    "transformers>=4.46.0",
    "unstructured>=0.16.3",
]

[tool.uv]
dev-dependencies = ["ruff>=0.7.1"]

[tool.ruff]
line-length = 100
